; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_status.c_handle_set_arm64_thread_state.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_status.c_handle_set_arm64_thread_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ARM_THREAD_STATE64_COUNT = common dso_local global i64 0, align 8
@KERN_INVALID_ARGUMENT = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @handle_set_arm64_thread_state(i64 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @ARM_THREAD_STATE64_COUNT, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @KERN_INVALID_ARGUMENT, align 4
  store i32 %12, i32* %4, align 4
  br label %19

13:                                               ; preds = %3
  %14 = load i64, i64* %5, align 8
  %15 = inttoptr i64 %14 to i32*
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @thread_state64_to_saved_state(i32* %15, i32* %16)
  %18 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %13, %11
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @thread_state64_to_saved_state(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
